retravail tp web statique : media, img, card

--- a/index.html
+++ b/index.html
@@ -48,12 +48,18 @@
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                     <div class="card">
-                        <i class="fa-solid fa-camera"></i>
+                        <div class="circle-item">
+                            <i class="fa-solid fa-camera"></i>
+                            <div class="circle"></div>
+                        </div>
                         <h3>LOREM IPSUM</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                     <div class="card">
-                        <i class="fa-solid fa-camera"></i>
+                        <div class="circle-item">
+                            <i class="fa-solid fa-camera"></i>
+                            <div class="circle"></div>
+                        </div>
                         <h3>LOREM IPSUM</h3>
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
@@ -77,13 +83,13 @@
             </video>
         </section>
         <section class="container frame-text">
-            <div class="paragraphe">
+            <div class="paragraphe1">
                 <h3>LOREM IPSUM</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat temporibus, facere sunt necessitatibus et vitae quidem blanditiis doloremque fugiat beatae!</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, exercitationem?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, exercitationem?</p>
             </div>
-            <div class="paragraphe">
+            <div class="paragraphe2">
                 <h3>LOREM IPSUM</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat temporibus, facere sunt necessitatibus et vitae quidem blanditiis doloremque fugiat beatae!</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, exercitationem?</p>
@@ -92,20 +98,20 @@
         </section>
         <section class="slider">
             <h3>GALLERY</h3>
-            <img src="./images/img_camera_grey.JPG" alt="appareil photo">
+            <img src="./images/img_camera_grey.JPG" alt="appareil photo" loading="lazy">
         </section>
         <section class="container">
             <div class="gallery-items">
-                <div>
-                    <img class="img_camera" src="./images/img_camera_grey.JPG" alt="appareil photo">
+                <div class="lorem-img1">
+                    <img class="img_camera" src="./images/img_camera_grey.JPG" alt="appareil photo" loading="lazy">
                     <p>LOREM IPSUM</p>
                 </div>
-                <div>
-                    <img class="img_camera" src="./images/img_camera_grey.JPG" alt="appareil photo">
+                <div class="lorem-img2">
+                    <img class="img_camera" src="./images/img_camera_grey.JPG" alt="appareil photo" loading="lazy">
                     <p>LOREM IPSUM</p>
                 </div>
-                <div>
-                    <img class="img_camera" src="./images/img_camera_grey.JPG" alt="appareil photo">
+                <div class="lorem-img3">
+                    <img class="img_camera" src="./images/img_camera_grey.JPG" alt="appareil photo" loading="lazy">
                     <p>LOREM IPSUM</p>
                 </div>
             </div>
@@ -122,12 +128,12 @@
                 <div class="article">
                     <h3>LOREM IPSUM</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, sequi.</p>
-                    <img class="img_camera" src="./images/img_camera_grey.JPG" alt="appareil photo">
+                    <img class="img_camera" src="./images/img_camera_grey.JPG" alt="appareil photo" loading="lazy">
                 </div>
                 <div class="article">
                     <h3>LOREM IPSUM</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, sequi.</p>
-                    <img class="img_camera" src="./images/img_camera_grey.JPG" alt="appareil photo">
+                    <img class="img_camera" src="./images/img_camera_grey.JPG" alt="appareil photo" loading="lazy">
                 </div>
             </div>
         </section>
